[package]
name = "kumo-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
chrono-tz = "0.9.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
